<resources>
    <string name="app_name">ProjectMotivation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_reset">Reset Password</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_get_users">Get Users</string>
    <!-- Image Views -->
    <string name="iv_splashlogo">SplashLogo</string>
    <string name="iv_p3">company</string>
    <!-- Edit Texts -->
    <string name="et_register_email">E-mail</string>
    <string name="et_register_password">Password</string>
    <string name="et_register_password_check">Confirm Password</string>
    <string name="et_register_name">Name</string>
    <string name="et_register_username">Username</string>
    <string name="et_login_email">Your email</string>
    <string name="et_login_password">Your password</string>
    <!-- Text Views -->
    <string name="tv_item_status">Online</string>
    <string name="tv_motto">Business as Unusual</string>
    <string name="tv_communication">Communication</string>
    <string name="tv_multitasking">Multitasking</string>
    <string name="tv_growth">Growth</string>
    <string name="tv_next">Next</string>
    <string name="tv_reset_subtitle"><font color="#6A8D73"><b>Reset Password</b></font> if you forgot yours.</string>
    <string name="tv_register_title">Create an account.</string>
    <string name="tv_register_subtitle"><font color="#6A8D73"><b>Register</b></font> to get started with the app.</string>
    <string name="tv_register_backToLogin">I already have an account <font color="#6A8D73"><b>Login</b></font></string>
    <string name="tv_login_register">I don\'t have an account <font color="#6A8D73"><b>Register</b></font></string>
    <string name="tv_login_reset">Forgot Password?</string>
    <string name="tv_login_subtitle"><font color="#6A8D73"><b>Login</b></font> if you already have an account.</string>
    <string name="tv_welcome_title">Motivation</string>
    <string name="tv_welcome_subtitle">Motivation is the process that initiates, guides, and maintains goal-oriented behaviors. Join us now!\n\n
        <b>Login</b> if you already have an account.\n
        <b>Register</b> to get started with the app.
    </string>
    <!-- Bottom Nav Bar -->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="bottom_nav_chat">Messages</string>
    <string name="btn_save">Save</string>
    <string name="et_chatsecond_send">Send message</string>
    <string name="sendbutton">SendButton</string>
    <string name="empty_msg">empty_msg</string>
    <string name="tv_home_title">No asta da!</string>
    <string name="fundal">FUNDAL</string>
</resources>