<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/light_goldenrod_yellow"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_chat_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/et_register_username"
                android:textColor="@color/light_goldenrod_yellow"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/iv_chat_userImage"
                app:layout_constraintHorizontal_bias="0.322"
                app:layout_constraintStart_toEndOf="@+id/btn_back"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/iv_chat_userImage"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/blank_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundPercent="1"
                tools:ignore="ContentDescription,ImageContrastCheck,ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat_second"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/et_chatSecond_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

    </androidx.recyclerview.widget.RecyclerView>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_chatSecond_send"
        style="@style/TextInputEditText_Chat"
        android:layout_width="0dp"
        android:layout_height="51.5dp"
        android:hint="@string/et_chatsecond_send"
        android:inputType="text"
        android:maxLines="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_send"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />

    <ImageButton
        android:id="@+id/btn_send"
        android:layout_width="54dp"
        android:layout_height="51dp"
        android:background="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_send_24"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/sendbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>